z-index fix

--- a/src/app/post/post.component.css
+++ b/src/app/post/post.component.css
@@ -29,7 +29,7 @@
   border-radius: 10px;
   overflow: hidden;
   position: relative;
-  z-index: 999;
+  z-index: 1;
 }
 
 :host ::ng-deep ul{
